# xThermo

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.h.in  docGen.sh
Application/commandline/: CMakeLists.txt  SWEOSbash.cpp  SWEOSbash.h  getopt_arguments.cpp  getopt_arguments.h
Application/desktop/: CMakeLists.txt  MainWindow.cxx  MainWindow.h  MainWindow.ui  main.cxx  qroundprogressbar.cpp
ThirdParties/: CoolProp.add2CmakeLists  CoolProp.sh  gsl.sh  readme.md
ThirdParties/CoolProp_patches/: 381c8535.patch
ThirdParties/PROST/: CMakeLists.txt  PROST4_TXT.htm  decl.h  iaps.c  iaps.h  steam4.h
ThirdParties/freesteam-2.1/: CMakeLists.txt
ThirdParties/freesteam-2.1/example/: CMakeLists.txt  example.cpp  freesteam.h  makefile  steam.h
ThirdParties/freesteam-2.1/include/: common.h
ThirdParties/freesteam-2.1/src/: b23.c  steam.c  steam_ph.c  viscosity.c
cmake/: CoolProp.cmake  Matlab.cmake  PROST.cmake  apple.cmake  gsl.cmake  iapws_others.cmake  julia.cmake  openmp.cmake  python.cmake  swig.cmake  tcl.cmake  xThermal.cmake
doc/home/: config.toml
doc/presentation/: main.tex
doc/presentation/Includes/: config.tex
doc/presentation/frames/: xThermal.tex
doc/sphinx/source/: conf.py  include.rst_  index.rst  manual.bib
doc/sphinx/source/API/doc/: index.rst
doc/sphinx/source/API/doc/python/: xThermal.H2ONaCl.rst  xThermal.rst
doc/sphinx/source/_extensions/sphinx_gallery/: docs_resolv.py  gen_rst.py
doc/sphinx/source/_themes/gdal_rtd/: footer.html
doc/sphinx/source/binder/: requirements.txt
doc/sphinx/source/gallery/H2O/: readme.txt
doc/sphinx/source/gallery/H2O/pH/: plot_Cp_pH.py  plot_Density_pH.py  plot_PhaseDiagram_pH.py  plot_Temperature_pH.py  plot_Viscosity_pH.py  plot_beta_pH.py  plot_kappa_pH.py  readme.txt
doc/sphinx/source/gallery/H2O/pT/: plot_Cp_pT.py  plot_Density_pT.py  plot_Enthalpy_pT.py  plot_PhaseDiagram_pT.py  plot_Viscosity_pT.py  plot_beta.py  plot_kappa_pT.py
doc/sphinx/source/gallery/H2ONaCl/: readme.txt
doc/sphinx/source/gallery/H2ONaCl/Driesner2007a/: 1-s2.0-S0016703707002943-mmc1.txt  1-s2.0-S0016703707002943-mmc4.txt
doc/sphinx/source/gallery/H2ONaCl/Driesner2007b/: 1-s2.0-S0016703707002955-mmc3.txt
doc/sphinx/source/gallery/H2ONaCl/HPX/: helpfunc.py  plot_PhaseDiagram_HPX.py  plot_Properties_HPX.py  readme.txt
doc/sphinx/source/gallery/H2ONaCl/pT/: check_mmc4.sh  helpfunc.py  phaseBoundary_linear.pvsm  phaseBoundary_log.pvsm  phaseBoundary_loglinear.pvsm  plot_PhaseDiagram_PTX.py  plot_Properties_PTX.py  plot_VH.py  plot_VL.py  plot_VLH.py  plot_critical.py  plot_haliteLiquidus.py  readme.txt
doc/sphinx/source/gallery/NaCl/: readme.txt
doc/sphinx/source/gallery/NaCl/pT/: plot_Cp_pT_NaCl.py  plot_Density_pT_NaCl.py  plot_Enthalpy_pT_NaCl.py  plot_PhaseDiagram_NaCl.py  plot_Props_NaCl.py  plot_beta_pT_NaCl.py  plot_kappa_pT_NaCl.py  readme.txt
doxygen/: customdoxygen.css  mainpage.markdown  ref.bib
test/swig/: CMakeLists.txt  demo.cpp  demo.h  demo.i  main.cpp  readme.md  test.py
